# snake_ros1

./: CMakeLists.txt  package.xml
Script/: force.cpp  publish.cpp
config/: controller.yaml
launch/: control.launch  rivz.launch  spawn_mav.launch  start.launch
msg/: jointcon.msg
rviz/: snake.rviz
src/: joint_plugin.cpp
xacro/: gazebo_control.xacro  snake.robot.gazebo.xacro  snake.robot.urdf.xacro  snake_old_urdf_file.xacro  snake_robot_core.xacro
