<?xml version="1.0"?>
<package format="2">
    <name>snake_ros1</name>
    <version>0.0.0</version>
      <description>The  package</description>
       <license>TODO</license>
         <maintainer email="hrithik@t.todo">das</maintainer>
    <build_depend>message_generation</build_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>controller_interface</build_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <build_export_depend>gazebo_plugins</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>controller_interface</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
